2006-02-24  Aaron Bockover  <aaron@abock.org>

	* banshee.mdp: Updated MonoDevelop project

	* configure.ac: Automatically detect mDNSResponder; Added an explicit
	--enable-avahi option to override mDNSResponder detection in case a 
	system has both Zeroconf services (which is not recommended); 
	--enable-mdnsd can be used to force enable mDNSResponder as well

	* libbanshee/gst-cd-rip-0.10.c:
	* libbanshee/gst-cd-rip-0.8.c:
	* libbanshee/gst-cd-rip.h:
	* libbanshee/gst-playback-0.10.c: Renamed API from cd_rip_*/CdRip* 
	to gst_cd_ripper_*/GstCdRipper*

	* src/RipTransaction.cs:
	* src/Makefile.am: Moved RipTranscation.cs to 
	Banshee.Base/AudioCdRipper.cs
	
	* src/PlayerInterface.cs: Updated to reflect API renaming of
	RipTransaction->AudioCdRipper

	* src/Banshee.Base/AudioCdRipper.cs: Moved pieces around so threading
	is handled inside the track ripper instead of the batch wrapper to
	prepare managed layer for GStreamer 0.10, which handles threading
	magically; update P/Invoke calls to new gst_cd_ripper_* API

	* src/Banshee.Base/Makefile.am: Added AudioCdRipper.cs
	
2006-02-23  Aaron Bockover  <aaron@abock.org>

	* libbanshee/gst-playback-0.10.c: fix minor duration calculation bug;
	fixes audioscrobbler reporting and last-played update (slomo)

2006-02-23  Aaron Bockover  <aaron@abock.org>

	* libbanshee/gst-transcode-0.10.c: Fixed progress reporting by
	doing a duration query on the pipeline bin and a position query
	directly on audioconvert element

2006-02-23  Aaron Bockover  <aaron@abock.org>

	* libbanshee/gst-playback-0.10.c: Use the audio sink specified
	in gconf (Zaheer Abbas Merali, BGO #332350)

2006-02-23  Aaron Bockover  <aaron@abock.org>

	* configure.ac: If GStreamer 0.10 is enabled, require 0.10.3 (for
	gst_parse_bin_from_description)

	* libbanshee/gst-transcode-0.10.c: Transcoding now works; use
	ghost padding with new-decoded-pad from decodebin, and 
	gst_parse_bin_from_description to create a bubble-wrapped encoder